--- a/index.html
+++ b/index.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-	<head>
-		<meta charset="UTF-8">
-		<title>Barbearia Alura</title>
-		<link rel="stylesheet" href="style.css" >
-	</head>
-
-	<body>
-		<img id="banner" src="banner.jpg">
-		<h1>Sobre a Barbearia Alura</h1>
-
-		<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
-
-		<p id="missao" ><em>Nossa missão é:<strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
-
-		<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-	</body>
+<html lang="pt-br" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Mineração via GPU</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header>
+     <img src="logo.png">
+     <nav>
+     <ul>
+         <li><a href="index.html">Home</a></li>
+         <li><a href="index1.html">Linha 1660 TI</a></li>
+         <li><a href="super.html">Linha GTX 1660 Super</a></li>
+         <li><a href="1660.html">Linha GTX 1660</a></li>
+         <li><a href="mailto:ademir.martins@escola.pr.gov.br">e-mail</a></li>
+         <li><a href="tel:+55 046987973309">Telefone</a></li>
+         <li><a href="https://github.com/zaraki27">Github</a></li>
+     </ul> 
+     </nav>
+    </header>
+    <h1>Overclok para mineração</h1>
+    <img id="progra01" src="foto01.jpg">
+    <p>"Como fazer um Over correto"</p>
+    <p><a href="index1.html">Toda linha 1660 TI</a></p>
+    <p>Como funciona a mineração de bitcoins?</p>
+    <p><em>A mineração é o processo por meio do qual novos bitcoins são criados.
+    Embora ela possa ser uma atividade mais lucrativa do que a negociação
+    da criptomoeda em exchanges, hoje em dia ela se tornou praticamente inviável
+    para o investidor comum. Analistas consultados pela Forbes afirmam que é
+    praticamente impossível minerar usando um computador pessoal.</p>
+  
+  </body>
 </html>
