--- a/index1.html
+++ b/index1.html
@@ -2,57 +2,86 @@
 <html lang="pt-br" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Mineração via GPU</title>
+    <title>Robótica</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
-     <img src="logo.png">
+     <img id="logotipo" src="logo.JPEG">
      <nav>
      <ul>
          <li><a href="index.html">Home</a></li>
-         <li><a href="index1.html">Linha 1660 TI</a></li>
-         <li><a href="super.html">Linha GTX 1660 Super</a></li>
-         <li><a href="1660.html">Linha GTX 1660</a></li>
+         <li><a href="index1.html">O que é robótica?</a></li>
+         <li><a href="index2.html">Projetos de 2022</a></li>
+         <li><a href="index3.html">Fotos e demonstação dos projetos</a></li>
      </ul> 
      </nav>
     </header>
     
-      <h2>Modelos das GTX linha 16</h2>
+      <h2>O que é robótica?</h2>
   <ol>
-    <li class="modelos">GTX1660TI</li>
-    <h3>ESPECIFICAÇÕES DA GPU</h3>
-    <p>Processo de fabricação	12nm
-    PCI-Express bus	3.0
-    Chip	Turing TU116
-    Clock do GPU	1500 MHz
-    Clock do GPU (Turbo)	1770 MHz</p>
-    <h4>ESPECIFICAÇÕES DAS MEMÓRIAS</h4>
-    <p1>Tecnologia da RAM	GDDR6
-    Interface de largura de BUS	192 bit
-    Quantidade de RAM	6GB
-    Clock das memóriass	1500 MHz
-    Clock efetivo	12000 MHz
-    Largura de banda	288.0 GB/s</p1>
-    <h5>CARACTERÍSTICAS GERAIS<h5>
-    <p><em>Shading Units	1536
-    TMUs	96
-    Pixel Rate	84.96 GPixel/s
-    Texture Rate	169.9 GTexel/s
-    Performance de pontos flutuantes FP16	5.437 TFLOPS<em></p>
-    <h6>DESIGN</h6>
-    <p><em>Pinos de alimentação	1x 6 pinos
-    Suporte à combinação de placas	Sem suporte
-    Tipo de Slot	Dual-slot
-    Comprimento da placa	229 mm
-    TDP	120 W
-    Fonte recomendada	450 W
-    Conexões de vídeo	3x DisplayPort 1.4, 1x HDMI 2.0B, 1xDVI<em></p>
-    <h7><em>RECURSOS<em></h7>
-    <p><em>DirectX	12.0
-    OpenCL	1.2
-    OpenGL	4.6
-    Shader	6.3<em></p>
+    <li class="modelos">Introdução</li>
+        <p>Para explicar o que é robótica e tudo o que envolve essa tecnologia, vamos abrir este artigo com um dado impressionante.
+        Um estudo da Oxford Economics Robôs revelou que, em 2030, os robôs ocuparão 20 milhões de empregos.Consegue imaginar isso? Além disso, se o seu objetivo é atuar com robótica, nas próximas linhas você vai descobrir quais são os cursos indicados.
+        A robótica é a ciência responsável pela tecnologia em máquinas, computadores, softwares e sistemas, com controle mecânico e automático.</p>
+
+        <h1>Evolução histórica da Robótica</h1>
+
+        <p>Você já sabe, portanto, quando os nomes foram originados. Mas, e de lá para cá, o que mudou? Qual foi a evolução histórica da robótica? Bem, o primeiro robô mecânico surgiu em 1924 e utilizava o sistema de telefonia. Ele podia ligar e desligar os equipamentos que estavam conectados a si. Anos mais tarde, precisamente em 1937, um novo robô, chamado de Elektro, foi criado e ganhou bastante evidência. Assim como o primeiro, ele também era teleoperado. No entanto, executava funções adicionais, como andar e mover a cabeça. Já em 1954 foi desenvolvido o primeiro robô automático. As bases usadas para criá-lo deram forma ao Unimate, o primeiro robô de uso industrial, que trabalhava na linha de produção da General Motors, em 1961. Cinco anos depois, nasceu o Eliza, o primeiro programa de Inteligência Artificial. Pelos anos seguintes, foram feitas novas descobertas e, atualmente, uma série de robôs, com funcionalidades distintas, estão disponíveis no mercado. </p>
+        <h1>Qual a importância da robótica no desenvolvimento?</h1>
+        <p>A robótica tem sido amplamente utilizada no cenário educacional. O assunto, inclusive, tornou-se matéria escolar para as crianças. Além de desenvolver conhecimentos e habilidades relacionadas à tecnologia e ciência, a robótica contribui com a aprendizagem em outros aspectos. O raciocínio lógico é um deles. Afinal, os pequenos são estimulados a analisar e solucionar problemas. Com isso, a criatividade também é aprimorada. Quando a robótica é trabalhada em sala de aula, e em grupo, também nspira o trabalho em equipe. Foco, persistência e resiliência são ainda outras habilidades desenvolvidas.
+
+        <h1>Qual o objetivo da robótica? Para que serve?</h1>
+
+        <p>Você é daquelas pessoas que temem os robôs e acreditam que eles vão dominar o mundo? Ou faz parte do grupo de indivíduos que acha o máximo a ideia de ter máquinas que facilitam o dia a dia? Bem, seja qual for o seu lado nessa história, a verdade é que a robótica tem o intuito de assumir tarefas que são praticadas por humanos. Dessa forma, a tecnologia é mesmo capaz de trazer mais comodidade e excluir a ação humana em determinadas atividades. No tópico a seguir, você vai entender um pouco mais sobre como isso funciona na prática. Quais são as tendências dessa área? A robótica já tem sido usada em ramos diversos, e a expectativa é que sua utilização seja ampliada. Confira as principais tendências:</p>
+
+        <h1>Indústrias</h1>
+
+        <p>A robótica é aplicada em indústrias há bastante tempo e isso deve ser cada vez mais frequente.
+
+        Afinal, em ambientes fabris, sobretudo em linhas de produção, as atividades são muito repetitivas.
+
+        Quando seres humanos desempenham essas tarefas, há grandes chances de desgaste físico, acidentes e falhas.
+
+        As máquinas, por sua vez, são capazes de executar as operações de maneira rápida e mais eficiente.</p>
+
+        <h1>Medicina</h1>
+
+        <p>Você já ouviu falar em cirurgia robótica? Trata-se de um procedimento cirúrgico feito por robôs.
+
+        Dessa forma, pode ser conduzido por uma equipe médica a distância.
+
+        A grande vantagem dessa técnica é que o risco de erro é nulo, uma vez que a máquina é programada para realizar a cirurgia com precisão.</p>
+
+        <h1>Fisioterapia</h1>
+
+       <p>A área da Saúde tem aproveitado bem os benefícios da robótica.
+
+        Na fisioterapia, a tecnologia é usada para auxiliar os tratamentos de doenças diversas e a reabilitação de pacientes.
+
+        Um exemplo disso é o traje robótico, que ajuda pessoas com dificuldade de locomoção a andar e até correr.</p>
+
+        <h1>Tecnologia espacial</h1>
+
+        <p>As características distintas do ambiente extraterrestre não permitem que seres humanos saiam explorando por aí sem nenhum equipamento.
+
+        Por essa razão, as máquinas são fundamentais para o estudo de planetas e outras áreas do Universo.
+
+        Diversos robôs já saíram da superfície terrestre para investigar outros lugares.</p>
+
+        <h1>Indústria automobilística</h1>
+
+        <p>Falamos há alguns tópicos sobre a robótica nas indústrias.
+
+        Mas cabe destacarmos o setor automobilístico, que tem investido fortemente na tecnologia.
+
+        Se antes os robôs eram usados apenas para aprimorar os processos produtivos, hoje eles assumem outras funções e já atuam em testes de campo e laboratório.
+
+        Automação residencial
+        Apagar e acender as lâmpadas da sua casa pelo aparelho celular são simples possibilidades da robótica quando o assunto é automação residencial.
+
+        A tecnologia viabiliza uma série de tarefas, como controlar os equipamentos e sistemas dentro do lar.</p>
 
     <img sid="progra01" src="foto02.jpg">
     <li class="modelos"><strong>GTX1660Super<strong></li>; 
