--- a/index.html
+++ b/index.html
@@ -2,34 +2,40 @@
 <html lang="pt-br" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Mineração via GPU</title>
+    <title>Robótica 2022</title>    
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
-     <img src="logo.png">
-     <nav>
-     <ul>
-         <li><a href="index.html">Home</a></li>
-         <li><a href="index1.html">Linha 1660 TI</a></li>
-         <li><a href="super.html">Linha GTX 1660 Super</a></li>
-         <li><a href="1660.html">Linha GTX 1660</a></li>
-         <li><a href="mailto:ademir.martins@escola.pr.gov.br">e-mail</a></li>
-         <li><a href="tel:+55 046987973309">Telefone</a></li>
-         <li><a href="https://github.com/zaraki27">Github</a></li>
-     </ul> 
-     </nav>
+        <img id="logotipo" src="logo.JPEG">
+        <div>   
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>           
+                    <li><a href="mailto:ademir.martins@escola.pr.gov.br">e-mail</a></li>
+                    <li><a href="tel:+55 046987973309">Telefone</a></li>
+                    <li><a href="https://github.com/zaraki27">Github</a></li>
+                </ul> 
+            </nav>
+        </div>
     </header>
-    <h1>Overclok para mineração</h1>
-    <img id="progra01" src="foto01.jpg">
-    <p>"Como fazer um Over correto"</p>
-    <p><a href="index1.html">Toda linha 1660 TI</a></p>
-    <p>Como funciona a mineração de bitcoins?</p>
-    <p><em>A mineração é o processo por meio do qual novos bitcoins são criados.
-    Embora ela possa ser uma atividade mais lucrativa do que a negociação
-    da criptomoeda em exchanges, hoje em dia ela se tornou praticamente inviável
-    para o investidor comum. Analistas consultados pela Forbes afirmam que é
-    praticamente impossível minerar usando um computador pessoal.</p>
-  
+    <h1>Curso de robótica no colégio Estadual Timbu Velho</h1>
+
+    <img id="fotoinício" src="fotodecapa.jpg">
+
+    <h1>Robótica Paraná - Projetos</h1>
+
+    <p>Nesta página você encontra projetos de robótica, aulas e desafios estimulantes que ampliarão suas habilidades e proporcionarão um brilhante percurso! O material presente no kit de robótica será seu aliado na criação de diversos projetos!</p>
+    
+        <p>Que tal explorar alguns itens do kit de robótica antes das aulas? Conheça alguns projetos que podem ser realizados de modo independente.</p>
+        <nav>
+            <ul>
+                <li><a href="index1.html">O que é robótica?</a></li>
+                <li><a href="index2.html">Projetos de 2022</a></li>
+                <li><a href="index3.html">Fotos e demonstação dos projetos</a></li>               
+            </ul> 
+        </nav>
   </body>
 </html>
+
